DigIt CHANGE LOG
======================

2025/04/14 Use of Single Counter;
	   Added diDataType_FileNameArray to distinguish the returned data in Take;
	   Added transition from one mode to another depending on the number of Crops;
	   Added Directly Crop the First File in CustomMode;

        11 Use of MM_OpenArrayList classes and interfaces in Sources;
	   Renamed IDigIt_ROArray to IDigIt_ArrayR_PChars;
	   Added IDigIt_Source_Items interface for future Source sub Items in Menù;
	   Sources Twain and WIA use a separeted class for DownloadedFiles;
	   UI Adjustments for Linux;
	   Changed File Sorting to flsSortNatural for Linux compatibility;

        10 Solved SaveExt not updated when User Change Format;
           Added SaveImage method in Main;
	   Use of GetFilesInDir in Source_Folder and old code cleanup;
	   Added other Useful function in Progress Form;
	   ExportFiles Updated SaveAsIMG to handle recursive paths;

        09 ExportFiles Added first version of SaveAsIMG, moved functions from Execute to Class;
           Added EmptyImage in DeleteAll Captured.

        07 Added Tools Menu in Main;
           Added ExportFiles List UI;
           Added Screen Shots and Modified Readme in GitHub.
           
        04 Rewrite of Export to PDF using TBGRAReaderJpeg.GetJpegInfo and Streams;
	   Counters Default to 3 Digits;
	   Release of 0.1 beta;

        03 Deleted Form_PDF;
           Use of ExportFiles Form to generate PDF;

        02 Moved some resourcestring and Types to DigIt_types;
           Moved ProgressShow and ProgressSetTotal from Main to DigIt_Progress;
           Use DigIt_Progress.Cancelled intestead of Locals UserCancel;
           Added Experimental Form_ExportFiles;

        01 Load/Save of Writer Params using RTTI;
           Destination Setting Form use TBGRAFormatUIContainer.BuildSaveFormats and free Previous Writer if different from New;
           Added Auto Save Source/Destination when Changed;