@@ -14,7 +14,7 @@ object DigIt_Main: TDigIt_Main
   OnShow = FormShow
   object imgManipulation: TBGRAImageManipulation
     Left = 288
-    Height = 713
+    Height = 483
     Top = 79
     Width = 873
     Align = alClient
@@ -34,7 +34,7 @@ object DigIt_Main: TDigIt_Main
   end
   object rollCrops: TBCExpandPanel
     Left = 0
-    Height = 713
+    Height = 483
     Top = 79
     Width = 288
     Align = alLeft
@@ -77,7 +77,7 @@ object DigIt_Main: TDigIt_Main
     ButtonPosition = akLeft
     ButtonSize = 20
     Button.Left = 0
-    Button.Height = 713
+    Button.Height = 483
     Button.Top = 0
     Button.Width = 20
     Button.Caption = 'Crop Areas'
@@ -1038,8 +1038,8 @@ object DigIt_Main: TDigIt_Main
   end
   object rollPages: TBCExpandPanel
     Left = 0
-    Height = 20
-    Top = 792
+    Height = 250
+    Top = 562
     Width = 1411
     Align = alBottom
     Background.Color = clBtnFace
@@ -1090,11 +1090,10 @@ object DigIt_Main: TDigIt_Main
     Button.GlyphLayout = glRight
     AnimationSpeed = 20
     Animated = False
-    Collapsed = True
     object tbCaptured: TToolBar
       Left = 1
       Height = 28
-      Top = 20
+      Top = 21
       Width = 1409
       AutoSize = True
       ButtonHeight = 26
@@ -1157,13 +1156,14 @@ object DigIt_Main: TDigIt_Main
     end
     object lvCaptured: TListView
       Left = 1
-      Height = 0
-      Top = 19
+      Height = 200
+      Top = 49
       Width = 1409
       Align = alClient
       AutoSort = False
       Columns = <>
       ColumnClick = False
+      HideSelection = False
       IconOptions.Arrangement = iaLeft
       IconOptions.WrapText = False
       LargeImages = imgListThumb
@@ -1187,7 +1187,7 @@ object DigIt_Main: TDigIt_Main
   end
   object rollCounters: TBCExpandPanel
     Left = 1161
-    Height = 713
+    Height = 483
     Top = 79
     Width = 250
     Align = alRight
@@ -1230,7 +1230,7 @@ object DigIt_Main: TDigIt_Main
     ButtonPosition = akLeft
     ButtonSize = 20
     Button.Left = 0
-    Button.Height = 713
+    Button.Height = 483
     Button.Top = 0
     Button.Width = 20
     Button.Caption = 'Page Counters'
@@ -1683,7 +1683,7 @@ object DigIt_Main: TDigIt_Main
         Action = actClearQueue
         AutoSize = True
       end
-      object ToolButton1: TToolButton
+      object tbCropBack: TToolButton
         Left = 99
         Top = 0
         Action = actCropGoNext
@@ -2730,13 +2730,6 @@ object DigIt_Main: TDigIt_Main
       ImageIndex = 10
       OnExecute = actTakeExecute
     end
-    object actCrop: TAction
-      Caption = 'Crop'
-      Enabled = False
-      ImageIndex = 11
-      ShortCut = 116
-      OnExecute = actCropNextExecute
-    end
     object actCropNext: TAction
       Caption = 'Crop + Next'
       Enabled = False
@@ -2748,20 +2741,21 @@ object DigIt_Main: TDigIt_Main
       Caption = 'Next'
       Enabled = False
       ImageIndex = 13
+      ShortCut = 117
       OnExecute = actCropGoNextExecute
     end
     object actCropGoBack: TAction
       Caption = 'Back'
       Enabled = False
       ImageIndex = 14
-      ShortCut = 117
+      ShortCut = 118
       OnExecute = actCropGoBackExecute
     end
     object actCropAll: TAction
       Caption = 'Crop All'
       Enabled = False
       ImageIndex = 15
-      ShortCut = 118
+      ShortCut = 119
       OnExecute = actCropAllExecute
     end
     object actClearQueue: TAction
